{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 1912,
  "lineage": "d617caf9-0041-16d0-8f8b-f94e7a693473",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-bastion-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cca6bac080bed6ec",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:elastic-ip/eipalloc-0cca6bac080bed6ec",
            "association_id": "eipassoc-0903b93d6cb63fdce",
            "domain": "vpc",
            "id": "eipalloc-0cca6bac080bed6ec",
            "instance": "i-0ef4902c5a84e6a79",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-064b1be099ba070b2",
            "private_dns": "ip-10-250-2-228.ap-northeast-2.compute.internal",
            "private_ip": "10.250.2.228",
            "public_dns": "ec2-3-35-96-156.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.96.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-PRD-NGW-2A-EIP"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2A-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073c47a03ecdacd27",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:elastic-ip/eipalloc-073c47a03ecdacd27",
            "domain": "vpc",
            "id": "eipalloc-073c47a03ecdacd27",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-28-15.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.28.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-PRD-NGW-2C-EIP"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2C-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0da7ec283d76469",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:elastic-ip/eipalloc-0a0da7ec283d76469",
            "association_id": "eipassoc-02cdf94b939541eaf",
            "domain": "vpc",
            "id": "eipalloc-0a0da7ec283d76469",
            "instance": "i-0796fe3abf36a093b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0953d806beb630c4b",
            "private_dns": "ip-10-230-2-252.ap-northeast-2.compute.internal",
            "private_ip": "10.230.2.252",
            "public_dns": "ec2-3-38-36-23.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.36.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-DEV-NGW-2A-EIP"
            },
            "tags_all": {
              "Name": "SEO-DEV-NGW-2A-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.dev-bastion",
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ff4cb28d8e20e99",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:elastic-ip/eipalloc-07ff4cb28d8e20e99",
            "domain": "vpc",
            "id": "eipalloc-07ff4cb28d8e20e99",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-62-173.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.62.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-DEV-NGW-2C-EIP"
            },
            "tags_all": {
              "Name": "SEO-DEV-NGW-2C-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f70dc46b50a1648",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-0ef4902c5a84e6a79",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef4902c5a84e6a79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064b1be099ba070b2",
            "private_dns": "ip-10-250-2-228.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.228",
            "public_dns": "ec2-13-124-189-61.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.189.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024a97c36b3f63178",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0447ed0d005c103cb",
            "tags": {
              "Name": "k8s-bastion-Server"
            },
            "tags_all": {
              "Name": "k8s-bastion-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e24306eb3a4ab4a"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f70dc46b50a1648",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-0796fe3abf36a093b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0796fe3abf36a093b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0953d806beb630c4b",
            "private_dns": "ip-10-230-2-252.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.2.252",
            "public_dns": "ec2-43-201-78-106.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.78.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c734acab16ad5d5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057602168c67e3d8e",
            "tags": {
              "Name": "k8s-dev-bastion-Server"
            },
            "tags_all": {
              "Name": "k8s-dev-bastion-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b50b5061f495982c"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-argocd-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-0c133760b85c05c93",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c133760b85c05c93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0890afc36da6b99ae",
            "private_dns": "ip-10-250-50-222.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.50.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-055922c1987d32c0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c35860dbed0f1670",
            "tags": {
              "Name": "k8s-argocd-Server"
            },
            "tags_all": {
              "Name": "k8s-argocd-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a80705ef5db59cf"
            ]
          },
          "dependencies": [
            "aws_security_group.efs_security",
            "aws_subnet.pri_sub_a",
            "aws_vpc.vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dev-argocd-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-05a89dae7bf6638b0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a89dae7bf6638b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0445e0d6ce22757fc",
            "private_dns": "ip-10-230-50-23.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.50.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-039e351da459dd9d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5f152d1fd3afe61",
            "tags": {
              "Name": "k8s-dev-argocd-Server"
            },
            "tags_all": {
              "Name": "k8s-dev-argocd-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f71e0220f1943e3"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_efs_security",
            "aws_subnet.dev_pri_sub_a",
            "aws_vpc.dev_vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dev-dms-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-0e16fe2e8969dbb9d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e16fe2e8969dbb9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9a09419785a9f6c",
            "private_dns": "ip-10-230-51-82.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.51.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020ee12eff715783e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8284c52c24001e0",
            "tags": {
              "Name": "k8s-dev-argocd-Server"
            },
            "tags_all": {
              "Name": "k8s-dev-argocd-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-003ce68a7bbc7dd5c"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_dms_security",
            "aws_subnet.dev_pri_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dev-efs-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-016dea00491b17258",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016dea00491b17258",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c857142f53d8c8f2",
            "private_dns": "ip-10-230-51-134.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.51.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b742a9e7568c7cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8284c52c24001e0",
            "tags": {
              "Name": "k8s-dev-efs-Server"
            },
            "tags_all": {
              "Name": "k8s-dev-efs-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f71e0220f1943e3"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_efs_security",
            "aws_subnet.dev_pri_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dev-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f70dc46b50a1648",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-042efc9a5c702e638",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042efc9a5c702e638",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082ab397d694b5e66",
            "private_dns": "ip-10-230-50-122.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.50.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c3d463902b59059",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5f152d1fd3afe61",
            "tags": {
              "Name": "k8s-dev-managed-Server"
            },
            "tags_all": {
              "Name": "k8s-dev-managed-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a2460dddab7205c"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_private_security",
            "aws_subnet.dev_pri_sub_a",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dms-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-029ea6e3991d46f06",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029ea6e3991d46f06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff366b680614b0df",
            "private_dns": "ip-10-250-51-107.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.51.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0505f40398c43ea6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008c7abca064e1693",
            "tags": {
              "Name": "k8s-argocd-Server"
            },
            "tags_all": {
              "Name": "k8s-argocd-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c9900be044c715e"
            ]
          },
          "dependencies": [
            "aws_security_group.dms_security",
            "aws_subnet.pri_sub_c",
            "aws_vpc.vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-efs-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-02025f339f49a23cf",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02025f339f49a23cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0703f17e1e0ffac30",
            "private_dns": "ip-10-250-51-112.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.51.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d43daee8d90adf8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008c7abca064e1693",
            "tags": {
              "Name": "k8s-efs-Server"
            },
            "tags_all": {
              "Name": "k8s-efs-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a80705ef5db59cf"
            ]
          },
          "dependencies": [
            "aws_security_group.efs_security",
            "aws_subnet.pri_sub_c",
            "aws_vpc.vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f70dc46b50a1648",
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:instance/i-030e91cd81933d16d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030e91cd81933d16d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09de9e1f99cb2c6b4",
            "private_dns": "ip-10-250-50-238.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.50.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e347401140ff2e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c35860dbed0f1670",
            "tags": {
              "Name": "k8s-managed-Server"
            },
            "tags_all": {
              "Name": "k8s-managed-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d395708547cff422"
            ]
          },
          "dependencies": [
            "aws_security_group.private_security",
            "aws_subnet.pri_sub_a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:internet-gateway/igw-0c3ff8dcf7d2571db",
            "id": "igw-0c3ff8dcf7d2571db",
            "owner_id": "533267068090",
            "tags": {
              "Name": "SEO-DEV-IGW"
            },
            "tags_all": {
              "Name": "SEO-DEV-IGW"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:internet-gateway/igw-06ef810769af9e0f7",
            "id": "igw-06ef810769af9e0f7",
            "owner_id": "533267068090",
            "tags": {
              "Name": "SEO-PRD-IGW"
            },
            "tags_all": {
              "Name": "SEO-PRD-IGW"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "awesome-dev-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ff4cb28d8e20e99",
            "association_id": "eipassoc-042dbaa47f4573908",
            "connectivity_type": "public",
            "id": "nat-0dc326d2ae2f0efa6",
            "network_interface_id": "eni-0849bff56a4ce3970",
            "private_ip": "10.230.2.118",
            "public_ip": "43.200.62.173",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057602168c67e3d8e",
            "tags": {
              "Name": "SEO-DEV-NGW-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-NGW-2A"
            }
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "awesome-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073c47a03ecdacd27",
            "association_id": "eipassoc-004797589ee15b3a2",
            "connectivity_type": "public",
            "id": "nat-02f7845132e1dd607",
            "network_interface_id": "eni-0343a8594fb493d7d",
            "private_ip": "10.250.2.200",
            "public_ip": "15.165.28.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0447ed0d005c103cb",
            "tags": {
              "Name": "SEO-PRD-NGW-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2A"
            }
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_to_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.250.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a6a1eefcfb612e803085032262",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a6a1eefcfb612e80",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0785c49946f07998b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod_to_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.230.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05b0f7b5c5f06102f3304825548",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b0f7b5c5f06102f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0785c49946f07998b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:route-table/rtb-071ee3ceefd671d31",
            "id": "rtb-071ee3ceefd671d31",
            "owner_id": "533267068090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0dc326d2ae2f0efa6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-DEV-RT-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-RT-PRI-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:route-table/rtb-0ee3bca92109bb941",
            "id": "rtb-0ee3bca92109bb941",
            "owner_id": "533267068090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0dc326d2ae2f0efa6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-DEV-RT-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-RT-PRI-2C"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:route-table/rtb-02349b66a17e2e540",
            "id": "rtb-02349b66a17e2e540",
            "owner_id": "533267068090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3ff8dcf7d2571db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-DEV-RT-PUB"
            },
            "tags_all": {
              "Name": "SEO-DEV-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:route-table/rtb-0f8faceae9857576c",
            "id": "rtb-0f8faceae9857576c",
            "owner_id": "533267068090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ef810769af9e0f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.240.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-00d81115f1a6496ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-Route-Table"
            },
            "tags_all": {
              "Name": "SEO-PRD-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc",
            "aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:route-table/rtb-0b69c91570b382d31",
            "id": "rtb-0b69c91570b382d31",
            "owner_id": "533267068090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02f7845132e1dd607",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PRI-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:route-table/rtb-09eef8eb18f546c28",
            "id": "rtb-09eef8eb18f546c28",
            "owner_id": "533267068090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02f7845132e1dd607",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PRI-2C"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:route-table/rtb-087a0caa1e05870b8",
            "id": "rtb-087a0caa1e05870b8",
            "owner_id": "533267068090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ef810769af9e0f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PUB"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071636a84a175b273",
            "route_table_id": "rtb-0b69c91570b382d31",
            "subnet_id": "subnet-0cc216576814b3a39"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.db_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01747e846c75ad21f",
            "route_table_id": "rtb-09eef8eb18f546c28",
            "subnet_id": "subnet-0ed469b89ddadeffa"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.db_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bdb04eeaebc6748",
            "route_table_id": "rtb-071ee3ceefd671d31",
            "subnet_id": "subnet-097161397e9259816"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_db_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07901a2693d22d19f",
            "route_table_id": "rtb-0ee3bca92109bb941",
            "subnet_id": "subnet-04de403dfcde23ac0"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_db_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06598d03d667f047c",
            "route_table_id": "rtb-071ee3ceefd671d31",
            "subnet_id": "subnet-0be409dfcb895653d"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_mgnt_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e0044bc5dd9411",
            "route_table_id": "rtb-0ee3bca92109bb941",
            "subnet_id": "subnet-04381d5b9f0e089bb"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_mgnt_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daa859585714afe5",
            "route_table_id": "rtb-071ee3ceefd671d31",
            "subnet_id": "subnet-020c011650c851689"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_node_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049a6721b9a226908",
            "route_table_id": "rtb-0ee3bca92109bb941",
            "subnet_id": "subnet-083657a3bab98b02f"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_node_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaa785c7a09723e0",
            "route_table_id": "rtb-071ee3ceefd671d31",
            "subnet_id": "subnet-0b5f152d1fd3afe61"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_pri_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0837d1ec50a67522c",
            "route_table_id": "rtb-071ee3ceefd671d31",
            "subnet_id": "subnet-0f8284c52c24001e0"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_pri_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfe68ed81fd1da6c",
            "route_table_id": "rtb-02349b66a17e2e540",
            "subnet_id": "subnet-0ba76c115e80b3b99"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b48e68b0d12c4d7c",
            "route_table_id": "rtb-02349b66a17e2e540",
            "subnet_id": "subnet-057602168c67e3d8e"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7caeecbd2af7fdd",
            "route_table_id": "rtb-0b69c91570b382d31",
            "subnet_id": "subnet-05b1fcf6601d9b979"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.mgnt_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc8d963543047ff6",
            "route_table_id": "rtb-09eef8eb18f546c28",
            "subnet_id": "subnet-09935084bb39c8895"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.mgnt_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064358f849bf80957",
            "route_table_id": "rtb-0b69c91570b382d31",
            "subnet_id": "subnet-0fe555edd364a535a"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.node_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4522d3c1f082bb",
            "route_table_id": "rtb-09eef8eb18f546c28",
            "subnet_id": "subnet-011c8a7868758950f"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.node_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c244ca77c03c4b04",
            "route_table_id": "rtb-0b69c91570b382d31",
            "subnet_id": "subnet-0c35860dbed0f1670"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.pri_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09baf24610b930af6",
            "route_table_id": "rtb-09eef8eb18f546c28",
            "subnet_id": "subnet-008c7abca064e1693"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.pri_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00512f1a5ef73e8e6",
            "route_table_id": "rtb-087a0caa1e05870b8",
            "subnet_id": "subnet-065a888fcceaeba9b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047722eaf746251fb",
            "route_table_id": "rtb-087a0caa1e05870b8",
            "subnet_id": "subnet-0447ed0d005c103cb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-09e24306eb3a4ab4a",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e24306eb3a4ab4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SEO-PRD-VPC-BASTION-PUB-SG-2A",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-SG-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-SG-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-004a78369270086e0",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004a78369270086e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-PRD-PRI-DB-SG2024092313410585820000000f",
            "name_prefix": "SEO-PRD-PRI-DB-SG",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-0b50b5061f495982c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b50b5061f495982c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SEO-DEV-VPC-BASTION-PUB-SG-2A",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-SG-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-SG-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-0ff2034aa6513126d",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff2034aa6513126d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-DEV-PRI-DB-SG2024092313410577440000000e",
            "name_prefix": "SEO-DEV-PRI-DB-SG",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_dms_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-003ce68a7bbc7dd5c",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003ce68a7bbc7dd5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-DEV-PRI-DMS-SG2024092313410576450000000d",
            "name_prefix": "SEO-DEV-PRI-DMS-SG",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-00f71e0220f1943e3",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f71e0220f1943e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "SEO-DEV-EFS-SG",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-EFS-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-04ed5672ed8b856bf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ed5672ed8b856bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "dev_efs_sg",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-01df6566c7391e800",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01df6566c7391e800",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkinsDEV",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesomeDEV-jenkins-sg"
            },
            "tags_all": {
              "Name": "awesomeDEV-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-07a2460dddab7205c",
            "description": "Allow HTTP,HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a2460dddab7205c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SEO-DEV-VPC-PRI-SG",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-VPC-PRI-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PRI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_redis_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-061222647fd622eb0",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061222647fd622eb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "SEO-DEV-REDIS-SG",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-REDIS-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-REDIS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-01c9900be044c715e",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c9900be044c715e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-PRD-PRI-DMS-SG20240923134107294200000010",
            "name_prefix": "SEO-PRD-PRI-DMS-SG",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-07a80705ef5db59cf",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a80705ef5db59cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "SEO-PRD-EFS-SG",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-EFS-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-079358f926b57d50f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079358f926b57d50f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-06f42e62e4071ca70",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f42e62e4071ca70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-jenkins-sg"
            },
            "tags_all": {
              "Name": "awesome-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-0d395708547cff422",
            "description": "Allow HTTP,HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d395708547cff422",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SEO-PRD-VPC-PRI-SG",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:security-group/sg-07fa9ab90e275d4ac",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fa9ab90e275d4ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "SEO-PRD-REDIS-SG",
            "name_prefix": "",
            "owner_id": "533267068090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-REDIS-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-REDIS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0cc216576814b3a39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc216576814b3a39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjong-db-sub-2a"
            },
            "tags_all": {
              "Name": "wonjong-db-sub-2a"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0ed469b89ddadeffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed469b89ddadeffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjong-db-sub-2c"
            },
            "tags_all": {
              "Name": "wonjong-db-sub-2c"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-097161397e9259816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097161397e9259816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjongDEV-db-sub-2a"
            },
            "tags_all": {
              "Name": "wonjongDEV-db-sub-2a"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-04de403dfcde23ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04de403dfcde23ac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjongDEV-db-sub-2c"
            },
            "tags_all": {
              "Name": "wonjongDEV-db-sub-2c"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0be409dfcb895653d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be409dfcb895653d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjongDEV-mgnt-sub-2a"
            },
            "tags_all": {
              "Name": "wonjongDEV-mgnt-sub-2a"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-04381d5b9f0e089bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04381d5b9f0e089bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjongDEV-mgnt-sub-2c"
            },
            "tags_all": {
              "Name": "wonjongDEV-mgnt-sub-2c"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-020c011650c851689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c011650c851689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjongDEV-node-sub-2a"
            },
            "tags_all": {
              "Name": "wonjongDEV-node-sub-2a"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-083657a3bab98b02f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083657a3bab98b02f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjongDEV-node-sub-2c"
            },
            "tags_all": {
              "Name": "wonjongDEV-node-sub-2c"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pri_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-010c51733fc7d7f65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c51733fc7d7f65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PRI-2A"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pri_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0b5f152d1fd3afe61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5f152d1fd3afe61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PRI-2A"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pri_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0f8284c52c24001e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8284c52c24001e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PRI-2C"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0ba76c115e80b3b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba76c115e80b3b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-2A"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-057602168c67e3d8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057602168c67e3d8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-PUB-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PUB-2C"
            },
            "vpc_id": "vpc-0d63fd53127ed5d1a"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-05b1fcf6601d9b979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b1fcf6601d9b979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjong-mgnt-sub-2a"
            },
            "tags_all": {
              "Name": "wonjong-mgnt-sub-2a"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-09935084bb39c8895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09935084bb39c8895",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjong-mgnt-sub-2c"
            },
            "tags_all": {
              "Name": "wonjong-mgnt-sub-2c"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0fe555edd364a535a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe555edd364a535a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjong-node-sub-2a"
            },
            "tags_all": {
              "Name": "wonjong-node-sub-2a"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-011c8a7868758950f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011c8a7868758950f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wonjong-node-sub-2c"
            },
            "tags_all": {
              "Name": "wonjong-node-sub-2c"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0ac49bfb04e8c3c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac49bfb04e8c3c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0c35860dbed0f1670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c35860dbed0f1670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-008c7abca064e1693",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008c7abca064e1693",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-2C"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-065a888fcceaeba9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065a888fcceaeba9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-2A"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:subnet/subnet-0447ed0d005c103cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0447ed0d005c103cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267068090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PUB-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PUB-2C"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:vpc/vpc-0d63fd53127ed5d1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-06419eabb6729d35e",
            "default_route_table_id": "rtb-0a6a1eefcfb612e80",
            "default_security_group_id": "sg-0e89f099c240fcd58",
            "dhcp_options_id": "dopt-049de2ce1792b0138",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d63fd53127ed5d1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6a1eefcfb612e80",
            "owner_id": "533267068090",
            "tags": {
              "Name": "SEO-DEV-VPC"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267068090:vpc/vpc-01e3909a7f97b4dbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-078de9bc3341a3ecc",
            "default_route_table_id": "rtb-05b0f7b5c5f06102f",
            "default_security_group_id": "sg-026fe4bd54606f372",
            "dhcp_options_id": "dopt-049de2ce1792b0138",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e3909a7f97b4dbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b0f7b5c5f06102f",
            "owner_id": "533267068090",
            "tags": {
              "Name": "SEO-PRD-VPC"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0785c49946f07998b",
            "peer_owner_id": "533267068090",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-0d63fd53127ed5d1a",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-Peering"
            },
            "tags_all": {
              "Name": "VPC-Peering"
            },
            "vpc_id": "vpc-01e3909a7f97b4dbc"
          },
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}